--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="container">
         <h1>મારા પિતાની યાદમાં</h1>
         <div class="photo">
-            <img src="/api/placeholder/300/300" alt="પિતાનો ફોટો">
+            <img IMG_20240715_004234.jpg alt="પિતાનો ફોટો">
         </div>
         <div class="name">સ્વ. જનકભાઈ ત્રિભોવનદાસ રામાવત</div>
         <p>તેમને શ્રધ્ધાંજલી આપવા દિવાસળી ને સ્પર્શ કરો</p>
