--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="container">
         <h1>મારા પિતાની યાદમાં</h1>
         <div class="photo">
-            <img IMG_20240715_004234.jpg alt="પિતાનો ફોટો">
+            <img <img src="https://raw.githubusercontent.com/Justforbing/Papa-condolences-/0c1bb383877ed23c0a5608d2f3226123ad63821f/IMG_20240715_004234.jpg" alt="પિતાનો ફોટો">
         </div>
         <div class="name">સ્વ. જનકભાઈ ત્રિભોવનદાસ રામાવત</div>
         <p>તેમને શ્રધ્ધાંજલી આપવા દિવાસળી ને સ્પર્શ કરો</p>
