--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
 
     <!-- Add audio elements -->
     <audio id="omAudio" loop>
-        <source src="path_to_your_om_audio.mp3" type="audio/mpeg">
+        <source src="https://raw.githubusercontent.com/Justforbing/Papa-condolences-/0c1bb383877ed23c0a5608d2f3226123ad63821f/om.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     
     <audio id="ramAudio">
-        <source src="path_to_your_ram_audio.mp3" type="audio/mpeg">
+        <source src="https://raw.githubusercontent.com/Justforbing/Papa-condolences-/0c1bb383877ed23c0a5608d2f3226123ad63821f/ram_hanuman.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
